--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.freefair.lombok' version '8.3'
 }
 
 group = 'sh.casey.yomichan'
@@ -10,8 +11,14 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.slf4j:slf4j-api:2.0.7'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
+    implementation 'net.lingala.zip4j:zip4j:2.11.5'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0'
+    testImplementation 'org.apache.logging.log4j:log4j:2.20.0'
 }
 
 test {
