Add Jacoco for code coverage

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'io.freefair.lombok' version '8.3'
+    id 'jacoco'
 }
 
 group = 'sh.casey.yomichan'
@@ -23,4 +24,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
 }
