--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'java'
     id 'io.freefair.lombok' version '8.3'
     id 'jacoco'
+    id 'maven-publish'
 }
 
 group = 'sh.casey.yomichan'
-version = '1.0-SNAPSHOT'
+version project.hasProperty('version') ? version : '0.0.1'
 
 repositories {
     mavenCentral()
@@ -25,6 +26,15 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+publishing {
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
+}
+
 
 jacocoTestReport {
     reports {
